# cert-manager

./: README.md  TODO.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat
.docs/: 2026-06-16.md  システムアーキテクチャ設計書.md
cert_manager/: __init__.py
cert_project/: asgi.py  settings.py  urls.py  wsgi.py
certificates/: acme_helper.py  admin.py  kms_client.py  models.py  tests.py  urls.py  utils.py  views.py
certificates/migrations/: 0001_initial.py  0002_acmeaccount_acmechallenge_and_more.py  0003_certificateauthority_kms_key_id_and_more.py
certificates/static/certificates/: style.css
certificates/templates/certificates/: base.html  dashboard.html  login.html  register.html  setup_ca.html
kms/: kms_server.py  master.key
kms/secure_store/: 8dcc3274-71f5-437d-97df-d72b7ade49a6.json
tests/: test_example.py
